--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": ">=7.1",
         "laravel/framework": "^6|^7|^8",
-        "milebits/eloquent-filters": "^2"
+        "milebits/eloquent-filters": ">=2"
     },
     "license": "GPL-3.0-or-later",
     "authors": [
