--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Permission handling for Laravel 6.0 and higher",
     "type": "library",
     "require": {
-        "php": ">=7.1",
+        "php": ">=8.0",
         "laravel/framework": "^6|^7|^8",
         "milebits/eloquent-filters": ">=2"
     },
@@ -28,7 +28,7 @@
         "files": ["src/Helpers/functions.php"],
         "psr-4": {
             "Milebits\\Authorizer\\": "src/",
-            "Milebits\\Authoriser\\Database\\": "database/"
+            "Milebits\\Authorizer\\Database\\": "database/"
         }
     },
     "extra": {
