--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,18 @@
     ],
     "prefer-stable": true,
     "minimum-stability": "dev",
+    "autoload-dev": {
+        "files": [
+            "src/Helpers/functions.php"
+        ],
+        "psr-4": {
+            "Milebits\\Authoriser\\Tests\\": "tests/"
+        }
+    },
     "autoload": {
-        "files": ["src/Helpers/functions.php"],
+        "files": [
+            "src/Helpers/functions.php"
+        ],
         "psr-4": {
             "Milebits\\Authorizer\\": "src/",
             "Milebits\\Authorizer\\Database\\": "database/"
@@ -37,5 +47,9 @@
                 "Milebits\\Authorizer\\Providers\\AuthorizerServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^6.14"
     }
 }
